Added a multi-column footer

--- a/index.html
+++ b/index.html
@@ -116,9 +116,32 @@
 		</div>
 		<div id="footer">
 			
-
-			
-
+<div id="footerwrap">
+			<div class="footercols">
+				<h1>About VDW</h1>
+				<p>Located in the heart of Manhattan, Van Der Woodsen Handcrafted Jewels has a long history of making pretty things.Lorem ipsum dolor sit amet, no denique consulatu vulputate per. Sea viris zril postulant cu, nemore blandit vulputate in usu, et adipisci accusamus definiebas nec. His dictas inimicus dissentiet in, soleat regione cu duo. Eam id virtute ceteros menandri. </p>
+			</div>
+			<div class="footercols">
+			<h1>Contact</h1>
+				<p>Located in the heart of Manhattan, Van Der Woodsen Handcrafted Jewels has a long history of making pretty things.</p>
+				<p>
+<dl>
+<dd>Van Der Woodsen Jeweler</dd>
+<dd>645 &frac12; Lexington Ave</dd>
+<dd>New York, NY 10022</dd>
+</dl>
+<dl>
+	<dd>+1 555 394 1834</dd>
+	<dd>Hours: 10am - 6pm, Monday - Friday</dd>
+</dl></p><p>
+</div>
+			<div class="footercols">
+				<h1>Catalogs</h1>
+				<p>Catalogs are availible upon request. We publish a new catalog every Spring and Fall.</p>
+				<h1>Custom Work</h1>
+				<p>Please make an appointment with one of our world-class jewelers to discuss creating a custom VDW piece.</p>
+			</div>
+</div>
 		</div>
 </body>
 </html>
