added font & fixed some styling issues

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="style.css">
+<link href='http://fonts.googleapis.com/css?family=Cinzel' rel='stylesheet' type='text/css'>
     <meta charset="utf-8" />
     <title>Demo</title>
 </head>
@@ -132,7 +133,7 @@
 </dl>
 <dl>
 	<dd>+1 555 394 1834</dd>
-	<dd>Hours: 10am - 6pm, Monday - Friday</dd>
+	<dd>Hours: 10am - 6pm, M - F </dd>
 </dl></p><p>
 </div>
 			<div class="footercols">
