--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <script type="text/javascript" src="noemify.js"></script>
    
    <div id="header">
-   <img src="images/title.png">
+   <img src="images/title.png" alt="title">
    </div>
 
    <div id="objectWrapper">
@@ -34,72 +34,72 @@
 	</div>
    <!-- product boxes -->
 
-		<div class="box"><img src="http://i03.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/rarities-18k-rose-gold-multigem-panther-ring-d-20140519140338117~357485.jpg" class="boximage">
+		<div class="box"><img src="http://i03.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/rarities-18k-rose-gold-multigem-panther-ring-d-20140519140338117~357485.jpg" class="boximage" alt="productimage">
 		<div class="tag"><span class="oneofakind">One of a kind</span></div>
 		<span class="product_title">Tsavorite Panther</span>
 		<span class="price">$5,000</span></div>
 
-		<div class="box"><img src="http://i04.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/colleen-lopez-ombre-sunset-ametrine-and-zircon-ring-d-20140603092245333~346420.jpg" class="boximage">
+		<div class="box"><img src="http://i04.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/colleen-lopez-ombre-sunset-ametrine-and-zircon-ring-d-20140603092245333~346420.jpg" class="boximage" alt="productimage">
 		<div class="tag"><span class="lastchance">Almost out of stock</span></div>
 		<span class="product_title">Ametrine Sunset</span>
 		<span class="price">$3,500</span></div>
 
-		<div class="box"><img src="http://i01.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/victoria-wieck-blue-sapphire-14k-overlay-band-ring-d-20140505102658483~342706_715.jpg" class="boximage">
+		<div class="box"><img src="http://i01.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/victoria-wieck-blue-sapphire-14k-overlay-band-ring-d-20140505102658483~342706_715.jpg" class="boximage" alt="productimage">
 		<div class="tag"><span class="lastchance">Almost out of stock</span></div>
 		<span class="product_title">Blue Sapphire Wrap</span>
 		<span class="price">$2,500</span></div>
 
-		<div class="box"><img src="http://i03.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/rarities-14k-rose-gold-pink-opal-and-zircon-ring-d-2014062711330325~354347.jpg" class="boximage">
+		<div class="box"><img src="http://i03.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/rarities-14k-rose-gold-pink-opal-and-zircon-ring-d-2014062711330325~354347.jpg" class="boximage" alt="productimage">
 		<div class="tag"></div>
 		<span class="product_title">Pink Opal Ring</span>
 		<span class="price">$2,500</span></div>
 
-		<div class="box"><img src="http://i04.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/rarities-sapphire-and-zircon-10k-evil-eye-bracelet-d-20140213170809217~322185.jpg" class="boximage">
+		<div class="box"><img src="http://i04.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/rarities-sapphire-and-zircon-10k-evil-eye-bracelet-d-20140213170809217~322185.jpg" class="boximage" alt="productimage">
 		<div class="tag"><span class="oneofakind">One of a kind</span></div>
 		<span class="product_title">Evil Eye Wristlet</span>
 		<span class="price">$1,500</span></div>
 
-		<div class="box"><img src="http://i03.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/14k-tri-color-74ct-diamond-intertwined-band-ring-d-20130319175859297~244547.jpg" class="boximage">
+		<div class="box"><img src="http://i03.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/14k-tri-color-74ct-diamond-intertwined-band-ring-d-20130319175859297~244547.jpg" class="boximage" alt="productimage">
 		<div class="tag"></div>
 		<span class="product_title">Triple Diamond Eternity Set</span>
 		<span class="price">$2,500</span></div>
 
-		<div class="box"><img src="http://i04.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/mateo-bijoux-corundum-and-multigem-7-line-bracelet-d-20140430125837043~332818.jpg" class="boximage">
+		<div class="box"><img src="http://i04.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/mateo-bijoux-corundum-and-multigem-7-line-bracelet-d-20140430125837043~332818.jpg" class="boximage" alt="productimage">
 		<div class="tag"></div>
 		<span class="product_title">Corrundum Chunks</span>
 		<span class="price">$1,750</span></div>
 
-		<div class="box"><img src="http://i01.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/victoria-wieck-london-blue-topaz-and-zircon-14k-ring-d-2014050516180845~342709_alt1.jpg" class="boximage">
+		<div class="box"><img src="http://i01.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/victoria-wieck-london-blue-topaz-and-zircon-14k-ring-d-2014050516180845~342709_alt1.jpg" class="boximage" alt="productimage">
 		<div class="tag"><span class="oneofakind">One of a kind</span></div>
 		<span class="product_title">London Blue Topaz</span>
 		<span class="price">$4,500</span></div>
 
-		<div class="box"><img src="http://i03.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/rarities-diamond-and-chalcedony-statement-earrings-d-2013112509121232~299220.jpg" class="boximage">
+		<div class="box"><img src="http://i03.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/rarities-diamond-and-chalcedony-statement-earrings-d-2013112509121232~299220.jpg" class="boximage" alt="productimage">
 		<div class="tag"><span class="lastchance">Almost out of stock</span></div>
 		<span class="product_title">Diamond and Chalcedony</span>
 		<span class="price">$3,250</span></div>
 
-		<div class="box"><img src="http://i03.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/rarities-759ct-black-spinel-sterling-silver-bracelet-d-20140408135755233~333498.jpg" class="boximage">
+		<div class="box"><img src="http://i03.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/rarities-759ct-black-spinel-sterling-silver-bracelet-d-20140408135755233~333498.jpg" class="boximage" alt="productimage">
 		<div class="tag"><span class="lastchance">Almost out of stock</span></div>
 		<span class="product_title">Black Diamond Bangle</span>
 		<span class="price">$3,750</span></div>
 
-		<div class="box"><img src="http://i01.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/colleen-lopez-better-things-in-life-necklace-d-20130510103752093~252674.jpg" class="boximage">
+		<div class="box"><img src="http://i01.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/colleen-lopez-better-things-in-life-necklace-d-20130510103752093~252674.jpg" class="boximage" alt="productimage">
 		<div class="tag"></div>
 		<span class="product_title">Sapphire Showstopper</span>
 		<span class="price">$3,750</span></div>
 
-		<div class="box"><img src="http://i03.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/jean-dousset-1358ct-absolute-and-simulated-stones-ring-d-20140411130040643~338514.jpg" class="boximage">
+		<div class="box"><img src="http://i03.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/jean-dousset-1358ct-absolute-and-simulated-stones-ring-d-20140411130040643~338514.jpg" class="boximage" alt="productimage">
 		<div class="tag"><span class="lastchance">Almost out of stock</span></div>
 		<span class="product_title">Amethyst and Diamonds</span>
 		<span class="price">$3,750</span></div>
 
-		<div class="box"><img src="http://i02.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/jean-dousset-absolute-pave-bow-hinged-bangle-bracelet-d-20140415154808923~340231_40W.jpg" class="boximage">
+		<div class="box"><img src="http://i02.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/jean-dousset-absolute-pave-bow-hinged-bangle-bracelet-d-20140415154808923~340231_40W.jpg" class="boximage" alt="productimage">
 		<div class="tag"></div>
 		<span class="product_title">Diamond Bow</span>
 		<span class="price">$3,750</span></div>
 
-		<div class="box"><img src="http://i01.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/jean-dousset-absolute-canary-and-created-sapphire-ring-d-2013092611094629~290197.jpg" class="boximage">
+		<div class="box"><img src="http://i01.hsncdn.com/is/image/HomeShoppingNetwork/prodgrid/jean-dousset-absolute-canary-and-created-sapphire-ring-d-2013092611094629~290197.jpg" class="boximage" alt="productimage">
 		<div class="tag"><span class="oneofakind">One of a kind</span></div>
 		<span class="product_title">Canary and Navy Diamonds</span>
 		<span class="price">$3,750</span></div>
@@ -125,14 +125,13 @@
 			<div class="footercols">
 			<h1>Contact</h1>
 				<p>Located in the heart of Manhattan, Van Der Woodsen Handcrafted Jewels has a long history of making pretty things.</p>
-				<p>
-<dl>
+				
+<dl><dt></dt>
 <dd>Van Der Woodsen Jeweler</dd>
 <dd>645 &frac12; Lexington Ave</dd>
 <dd>New York, NY 10022</dd>
 </dl>
-<dl>
-	<dd>+1 555 394 1834</dd>
+<dl><dt></dt><dd>+1 555 394 1834</dd>
 	<dd>Hours: 10am - 6pm, M - F </dd>
 </dl>
 </div>
